# YARDS

./: .gitignore  Dockerfile  README.md
.github/workflows/: apitest.yml  daemontest.yml  frontendtest.yml
libyards/: Cargo.toml
libyards/src/: models.rs
yards-api/: Cargo.toml  Dockerfile  sqlx-data.json
yards-api/migrations/: 20230618031725_init.sql  20230618213226_dnsroot.sql
yards-api/src/: app.rs  auth.rs  lib.rs  main.rs  models.rs
yards-api/src/admin/: ddns.rs  dhcprange.rs  dnsrecord.rs  dnszone.rs  group.rs  iprange.rs  mod.rs  routes.rs  server.rs
yards-api/src/agent/: generate.rs  mod.rs
yards-api/src/device/: device.rs  mod.rs
yards-frontend/: Cargo.toml
yards-frontend/src/: main.rs
yardsd/: Cargo.toml  blamedns.skillissue.fyi.db  yards.conf
yardsd/lib/templates/: dhcpd.conf  dnszone.db  yards.conf
yardsd/src/: dhcp.rs  dns.rs  main.rs
