[package]
name = "libyards"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls", "chrono", "postgres"] }
utoipa = { version = "3.3.0", features = ["actix_extras", "chrono", "debug", "yaml"] }
