[package]
name = "yards_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-test = "0.1.1"
actix-web = "4.3.1"
base64 = "0.21.2"
chrono = { version = "0.4.25", features = ["serde"] }
env_logger = "0.10.0"
passwords = "3.1.13"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sha2 = "0.10.7"
sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls", "chrono", "postgres"] }
utoipa = { version = "3.3.0", features = ["actix_extras", "chrono", "debug", "yaml"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["actix-web"] }
