[package]
name = "yards-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-oauth2 = { version = "0.6.3", features = ["openidconnect", "router", "openid"] }
