[package]
name = "yardsd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["serde_json", "json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
tera = "1.19.0"
tokio = { version = "1.28.2", features = ["full"] }
libyards = { path = "../libyards" }
anyhow = "1.0.75"
sha1 = "0.10.6"
